[tool.poetry]
name = "hexlet-django-blog"
version = "0.1.0"
description = ""
authors = ["MarsBroshok96 <marsbroshok1996@gmail.com>"]
readme = "README.md"
packages = [{include = "hexlet_django_blog"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.1.5"


[tool.poetry.group.dev.dependencies]
yapf = "^0.32.0"
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
